--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
                     <div class="carousel-caption d-none d-md-flex">
                       <h5>Kerala Boat Race</h5>
                       <p>Some representative placeholder content for the first slide.</p>
+                      <button class="btn btn-info">More Details</button>
                     </div>
                   </div>
                   <div class="carousel-item">
@@ -176,6 +177,7 @@
                     <div class="carousel-caption d-none d-md-flex">
                       <h5>Theyyam</h5>
                       <p>Some representative placeholder content for the second slide.</p>
+                      <button class="btn btn-info">More Details</button>
                     </div>
                   </div>
                   <div class="carousel-item">
@@ -183,6 +185,7 @@
                     <div class="carousel-caption d-none d-md-flex">
                       <h5>Pooram</h5>
                       <p>Some representative placeholder content for the third slide.</p>
+                      <button class="btn btn-info">More Details</button>
                     </div>
                   </div>
                 </div>
